--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -5,7 +5,7 @@
 	<packaging>jar</packaging>
 	<name>Core</name>
 	<description>Core domain for batch processing, expressing a domain of Jobs, Steps, Chunks, etc.</description>
-	<url>http://static.springframework.org/spring-batch/${project.artifactId}</url>
+	<url>http://docs.spring.io/spring-batch/${project.artifactId}</url>
 	<parent>
 		<groupId>org.springframework.batch</groupId>
 		<artifactId>spring-batch-parent</artifactId>
@@ -203,7 +203,7 @@
 									<fileset dir="${basedir}/src/main/sql" includes="schema*.sql.vpp" />
 									<mapper type="glob" from="*.sql.vpp" to="*-sqlf.sql" />
 								</vppcopy>
-								
+
 								<vppcopy todir="${basedir}/target/generated-resources" overwrite="true">
 									<config>
 										<context>
