--- a/spring-batch-test/pom.xml
+++ b/spring-batch-test/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.springframework.batch</groupId>
 		<artifactId>spring-batch-parent</artifactId>
-		<version>2.2.5.RELEASE</version>
+		<version>2.2.6.BUILD-SNAPSHOT</version>
 		<relativePath>../spring-batch-parent</relativePath>
 	</parent>
 	<dependencies>
