--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<url>http://github.com/spring-projects/spring-batch</url>
 		<connection>scm:git:git://github.com/spring-projects/spring-batch.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/spring-projects/spring-batch.git</developerConnection>
-	  <tag>2.2.5.RELEASE</tag>
+	  <tag>HEAD</tag>
   </scm>
 	<issueManagement>
 		<system>JIRA</system>
