--- a/archetypes/simple-cli-javaconfig/pom.xml
+++ b/archetypes/simple-cli-javaconfig/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.springframework.batch</groupId>
     <artifactId>spring-batch-simple-cli-javaconfig</artifactId>
-    <version>3.0.0.BUILD-SNAPSHOT</version>
+    <version>3.0.0.M3</version>
     <packaging>jar</packaging>
     <name>Commandline</name>
     <url>http://www.springframework.org/spring-batch/archetypes/simple-cli-archetype</url>
