--- a/spring-batch-integration/pom.xml
+++ b/spring-batch-integration/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.springframework.batch</groupId>
 		<artifactId>spring-batch-parent</artifactId>
-		<version>3.0.0.M3</version>
+		<version>3.0.0.BUILD-SNAPSHOT</version>
 		<relativePath>../spring-batch-parent</relativePath>
 	</parent>
 	<properties>
