--- a/pom.xml
+++ b/pom.xml
@@ -439,6 +439,12 @@
 				</plugins>
 			</build>
 		</profile>
+		<profile>
+			<id>jsr-352-tck</id>
+			<modules>
+				<module>spring-batch-jsr352-tck</module>
+			</modules>
+		</profile>
 	</profiles>
 	<distributionManagement>
 		<site>
@@ -466,23 +472,23 @@
 		</extensions>
 		<pluginManagement>
 			<plugins>
-                <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-release-plugin</artifactId>
-                  <version>2.3</version>
-                </plugin>
-                <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-site-plugin</artifactId>
-                  <version>2.2</version>
-                  <dependencies>
-                    <dependency>
-                      <groupId>org.apache.maven.wagon</groupId>
-                      <artifactId>wagon-ssh</artifactId>
-                      <version>1.0-beta-7</version>
-                    </dependency>
-                  </dependencies>
-                </plugin>
+				<plugin>
+				  <groupId>org.apache.maven.plugins</groupId>
+				  <artifactId>maven-release-plugin</artifactId>
+				  <version>2.3</version>
+				</plugin>
+				<plugin>
+				  <groupId>org.apache.maven.plugins</groupId>
+				  <artifactId>maven-site-plugin</artifactId>
+				  <version>2.2</version>
+				  <dependencies>
+					<dependency>
+					  <groupId>org.apache.maven.wagon</groupId>
+					  <artifactId>wagon-ssh</artifactId>
+					  <version>1.0-beta-7</version>
+					</dependency>
+				  </dependencies>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-antrun-plugin</artifactId>
@@ -523,7 +529,7 @@
 		  <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-deploy-plugin</artifactId>
-                <version>2.7</version>
+				<version>2.7</version>
 				<configuration>
 					<skip>true</skip>
 				</configuration>
@@ -546,11 +552,11 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>jdepend-maven-plugin</artifactId>
-                <version>2.0-beta-2</version>
+				<version>2.0-beta-2</version>
 			</plugin>
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8.1</version>
+				<version>2.8.1</version>
 				<reportSets>
 					<reportSet>
 						<id>html</id>
@@ -585,7 +591,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
-                <version>2.3</version>
+				<version>2.3</version>
 			</plugin>
 		</plugins>
 	</reporting>
@@ -626,17 +632,14 @@
 			<name>Michael Minella</name>
 			<email>mminella@vmware.com</email>
 		</developer>
+		<developer>
+			<id>cschaefer</id>
+			<name>Chris Schaefer</name>
+			<email>cschaefer@gopivotal.com</email>
+		</developer>
 	</developers>
 	<pluginRepositories>
-<!-- 		<pluginRepository>
-			<id>com.springsource.repository.bundles.milestone</id>
-			<name> SpringSource Enterprise Bundle Repository - SpringSource Bundle Milestones</name>
-			<url>http://repository.springsource.com/maven/bundles/milestone</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</pluginRepository>
- -->		<pluginRepository>
+		<pluginRepository>
 			<id>com.springsource.repository.bundles.snapshot</id>
 			<name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Snapshots</name>
 			<url>http://repository.springsource.com/maven/bundles/snapshot</url>
