--- a/spring-batch-infrastructure/pom.xml
+++ b/spring-batch-infrastructure/pom.xml
@@ -19,7 +19,7 @@
         <url>https://github.com/spring-projects/spring-batch</url>
         <connection>scm:git:git://github.com/spring-projects/spring-batch.git</connection>
         <developerConnection>scm:git:git://github.com/spring-projects/spring-batch.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>2.2.6.RELEASE</tag>
     </scm>
 	<build>
 		<plugins>
