--- a/spring-batch-samples/pom.xml
+++ b/spring-batch-samples/pom.xml
@@ -16,7 +16,7 @@
         <url>https://github.com/spring-projects/spring-batch</url>
         <connection>scm:git:git://github.com/spring-projects/spring-batch.git</connection>
         <developerConnection>scm:git:git://github.com/spring-projects/spring-batch.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>2.2.6.RELEASE</tag>
     </scm>
 	<properties>
 		<!-- Override this with -Denvironment=XXXX to change database type -->
