[maven-release-plugin] prepare for next development iteration

--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -16,7 +16,7 @@
         <url>https://github.com/spring-projects/spring-batch</url>
         <connection>scm:git:git://github.com/spring-projects/spring-batch.git</connection>
         <developerConnection>scm:git:git://github.com/spring-projects/spring-batch.git</developerConnection>
-        <tag>2.2.6.RELEASE</tag>
+        <tag>HEAD</tag>
     </scm>
 	<dependencies>
 		<dependency>
