--- a/spring-batch-integration/pom.xml
+++ b/spring-batch-integration/pom.xml
@@ -11,7 +11,7 @@
 		<relativePath>../spring-batch-parent</relativePath>
 	</parent>
 	<properties>
-		<spring.integration.version>4.0.0.M2</spring.integration.version>
+		<spring.integration.version>4.0.0.RC1</spring.integration.version>
 		<maven.compiler.plugin>3.1</maven.compiler.plugin>
 	</properties>
 	<dependencies>
