Add basic JSR-352 configuration samples
* Inline class references
* batch.xml references
* Spring bean references

--- a/spring-batch-samples/pom.xml
+++ b/spring-batch-samples/pom.xml
@@ -219,6 +219,11 @@
 			<artifactId>mockito-all</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
