--- a/spring-batch-samples/src/main/resources/batch-hsql.properties
+++ b/spring-batch-samples/src/main/resources/batch-hsql.properties
@@ -19,4 +19,4 @@ batch.jdbc.pool.size=6
 batch.grid.size=6
 batch.verify.cursor.position=true
 batch.isolationlevel=ISOLATION_SERIALIZABLE
-
+batch.data.source.init=true
