BATCH-2144 Add Chris Schaefer as dev to `publish-maven.gradle`

--- a/publish-maven.gradle
+++ b/publish-maven.gradle
@@ -79,6 +79,11 @@ def customizePom(pom, gradleProject) {
 					email = 'mminella@gopivotal.com'
 					roles = ["project lead"]
 				}
+				developer {
+					id = 'chrisjs'
+					name = 'Chris Schaefer'
+					email = 'cschaefer@gopivotal.com'
+				}
 			}
 		}
 	}
