BATCH-2144 Add test inclusions/exclusions for tests to `build.gradle`

--- a/build.gradle
+++ b/build.gradle
@@ -130,6 +130,9 @@ subprojects { subproject ->
 			append = false
 			destinationFile = file("$buildDir/jacoco.exec")
 		}
+
+		include '**/*Tests.class'
+		exclude '**/Abstract*.class'
 	}
 
 	task sourcesJar(type: Jar) {
