BATCH-2144 Exclude long running test (same behavior as Maven)
* `$ mvn clean install -P bootstrap,all` does not run all tests. Exclude those additional tests from the Gradle build by default. They can be activated by providing the the `alltests` parameter, e.g.: `./gradlew clean build -Palltests`
* Execute the exact same tests as the Maven build
* Improve execution speed of Gradle build

--- a/build.gradle
+++ b/build.gradle
@@ -187,6 +187,7 @@ subprojects { subproject ->
 
 project('spring-batch-core') {
 	description = 'Spring Batch Core'
+
 	dependencies {
 		compile project(":spring-batch-infrastructure")
 
@@ -323,6 +324,9 @@ project('spring-batch-core-tests') {
 		optional "org.aspectj:aspectjweaver:$aspectjVersion"
 		optional "cglib:cglib-nodep:$cglibVersion"
 	}
+	test {
+		enabled = project.hasProperty('alltests') ? true : false
+	}
 }
 
 project('spring-batch-infrastructure-tests') {
@@ -387,7 +391,9 @@ project('spring-batch-infrastructure-tests') {
 
 		runtime "mysql:mysql-connector-java:$mysqlVersion"
 		runtime "postgresql:postgresql:$postgresqlVersion"
-
+	}
+	test {
+		enabled = project.hasProperty('alltests') ? true : false
 	}
 }
 
