BATCH-2144 Ensure that Gradle version of Spring Batch compiles with Java 8

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ subprojects { subproject ->
 	apply plugin: 'idea'
 	apply plugin: 'jacoco'
 
+	jacoco {
+		toolVersion = "0.7.0.201403182114"
+	}
+
 	sourceCompatibility=1.6
 	targetCompatibility=1.6
 
