--- a/spring-batch-parent/pom.xml
+++ b/spring-batch-parent/pom.xml
@@ -763,6 +763,24 @@
 				<version>1.0.3.RELEASE</version>
 				<optional>true</optional>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework.ldap</groupId>
+				<artifactId>spring-ldap-core</artifactId>
+				<version>2.0.1.RELEASE</version>
+				<optional>true</optional>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.ldap</groupId>
+				<artifactId>spring-ldap-core-tiger</artifactId>
+				<version>2.0.1.RELEASE</version>
+				<optional>true</optional>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.ldap</groupId>
+				<artifactId>spring-ldap-ldif-core</artifactId>
+				<version>2.0.1.RELEASE</version>
+				<optional>true</optional>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<distributionManagement>
