Updated commons-dbcp and commons-pool dependency scopes

--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -53,6 +53,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>commons-pool</groupId>
+			<artifactId>commons-pool</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
