--- a/spring-batch-parent/pom.xml
+++ b/spring-batch-parent/pom.xml
@@ -163,7 +163,7 @@
 				<repository>
 					<id>springsource-milestone</id>
 					<name>SpringSource Milestone Repository</name>
-					<url>https://repo.spring.io/libs-milestone/</url>
+					<url>http://repo.spring.io/libs-milestone</url>
 				</repository>
 				<repository>
 					<id>gemstone</id>
@@ -526,6 +526,12 @@
 				<artifactId>commons-dbcp</artifactId>
 				<version>1.2.2</version>
 				<optional>true</optional>
+			</dependency>
+			<dependency>
+				<groupId>commons-pool</groupId>
+				<artifactId>commons-pool</artifactId>
+				<version>1.5.4</version>
+				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>log4j</groupId>
