--- a/spring-batch-test/pom.xml
+++ b/spring-batch-test/pom.xml
@@ -51,6 +51,11 @@
 			<artifactId>commons-dbcp</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>commons-pool</groupId>
+			<artifactId>commons-pool</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 		</dependency>
