--- a/spring-batch-parent/pom.xml
+++ b/spring-batch-parent/pom.xml
@@ -715,7 +715,7 @@
 			<dependency>
 				<groupId>org.springframework.retry</groupId>
 				<artifactId>spring-retry</artifactId>
-				<version>1.0.3.RELEASE</version>
+				<version>1.1.0.RC1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.amqp</groupId>
